@@ -42,65 +42,28 @@ class Packeteryclass
 
     /**
      * Converts price from order currency to branch currency
-     * @param $order_currency_iso
-     * @param $branch_currency_iso
-     * @param $total
-     * @return float|int
+     * @param string $orderCurrencyIso
+     * @param string $branchCurrencyIso
+     * @param float|int $total
+     * @return float|int Returns 0 if rate was not found.
      */
-    public static function getRateTotal($order_currency_iso, $branch_currency_iso, $total)
-    {
-        $cnb_rates = null;
-        $sql = 'SELECT cs.conversion_rate
-                    FROM `' . _DB_PREFIX_ . 'currency_shop` cs 
-                    INNER JOIN `' . _DB_PREFIX_ . 'currency` c ON c.id_currency=cs.id_currency 
-                        AND c.iso_code="' . pSQL($order_currency_iso) . '";';
-        $conversion_rate_order = Db::getInstance()->getValue($sql);
+    public static function getRateTotal($orderCurrencyIso, $branchCurrencyIso, $total) {
+        $sql = 'SELECT `cs`.`conversion_rate` FROM `' . _DB_PREFIX_ . 'currency_shop` `cs` 
+                INNER JOIN `' . _DB_PREFIX_ . 'currency` `c` ON `c`.`id_currency` = `cs`.`id_currency` 
+                    AND `c`.`iso_code` = "' . pSQL($orderCurrencyIso) . '";';
+        $conversionRateOrder = Db::getInstance()->getValue($sql);
 
-        $sql = 'SELECT cs.conversion_rate
-                    FROM `' . _DB_PREFIX_ . 'currency_shop` cs 
-                    INNER JOIN `' . _DB_PREFIX_ . 'currency` c ON c.id_currency=cs.id_currency 
-                        AND c.iso_code="' . pSQL($branch_currency_iso) . '";';
-        $conversion_rate_branch = Db::getInstance()->getValue($sql);
+        $sql = 'SELECT `cs`.`conversion_rate` FROM `' . _DB_PREFIX_ . 'currency_shop` `cs` 
+                INNER JOIN `' . _DB_PREFIX_ . 'currency` `c` ON `c`.`id_currency` = `cs`.`id_currency` 
+                    AND `c`.`iso_code` = "' . pSQL($branchCurrencyIso) . '";';
+        $conversionRateBranch = Db::getInstance()->getValue($sql);
 
-        if ($conversion_rate_branch)
-        {
-            $conversion_rate = $conversion_rate_branch / $conversion_rate_order;
-            $total = round($conversion_rate * $total, 2);
+        if ($conversionRateBranch) {
+            $conversionRate = $conversionRateBranch / $conversionRateOrder;
+            return round($conversionRate * $total, 2);
         }
-        else
-        {
-            if (!$cnb_rates)
-            {
-                if ($data = @Tools::file_get_contents(
-                    'http://www.cnb.cz/cs/financni_trhy/devizovy_trh/kurzy_devizoveho_trhu/denni_kurz.txt'
-                ))
-                {
-                    $cnb_rates = array();
-                    foreach (array_slice(explode("\n", $data), 2) as $rate)
-                    {
-                        $rate = explode('|', $rate);
-                        if (!empty($rate[3]))
-                        {
-                            $cnb_rates[$rate[3]] = (float)preg_replace(
-                                '/[^0-9.]*/',
-                                '',
-                                str_replace(',', '.', $rate[4])
-                            );
-                        }
-                    }
-                    $cnb_rates['CZK'] = 1;
-                }
-            }
-            if (isset($cnb_rates[$order_currency_iso]) && ($cnb_rates))
-            {
-                $total = round($total * $cnb_rates[$order_currency_iso] / $cnb_rates[$branch_currency_iso], 2);
-            }
-            else
-            {
-                return 0;
-            }
-        }
-        return $total;
+
+        return 0;
     }
 
     /**
